crates/strider-analyze/tests/snapshots/v2__arm_thumb__calling_convention__forward_2.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x5b0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "8" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v10" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "14" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "16" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "18" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "20" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
