crates/strider-analyze/tests/snapshots/v2__arm_thumb__calling_convention__forward_4.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x5b4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "10" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "11" -> "1" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "12" -> "1" [color="#ff8800", label=arg9, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v20" [color="#888888", style=dashed];
  "v20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v21" [color="#888888", style=dashed];
  "v21" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v22" [color="#888888", style=dashed];
  "v22" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "23" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "37" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "39" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
